app/public/valig/assets/index-1I1WKNJN.css
/* ... */
.hover\:bg-accent\/50:hover {
	background-color: hsl(var(--accent) / 0.5);
}
.hover\:bg-destructive\/90:hover {
	background-color: hsl(var(--destructive) / 0.9);
}
.hover\:bg-muted:hover {
	background-color: hsl(var(--muted));
}
.hover\:bg-primary\/90:hover {
	background-color: hsl(var(--primary) / 0.9);
}
.hover\:bg-secondary\/80:hover {
	background-color: hsl(var(--secondary) / 0.8);
}
.hover\:text-destructive:hover {
	color: hsl(var(--destructive));
}
.hover\:text-foreground:hover {
	color: hsl(var(--foreground));
}
.hover\:text-muted-foreground:hover {
	color: hsl(var(--muted-foreground));
}
.hover\:text-primary:hover {
	color: hsl(var(--primary));
}
.hover\:text-yellow-400:hover {
	--tw-text-opacity: 1;
	color: rgb(250 204 21 / var(--tw-text-opacity, 1));
}
.hover\:underline:hover {
	text-decoration-line: underline;
}
.focus\:outline-none:focus {
	outline: 2px solid transparent;
	outline-offset: 2px;
}
.focus\:ring-1:focus {
	--tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width)
		var(--tw-ring-offset-color);
	--tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(1px + var(--tw-ring-offset-width))
		var(--tw-ring-color);
	box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
}
.focus\:ring-\[\#22c55e\]:focus {
	--tw-ring-opacity: 1;
	--tw-ring-color: rgb(34 197 94 / var(--tw-ring-opacity, 1));
}
.disabled\:cursor-default:disabled {
	cursor: default;
}
.disabled\:cursor-not-allowed:disabled {
	cursor: not-allowed;
}
.disabled\:opacity-50:disabled {
	opacity: 0.5;
}
.disabled\:opacity-60:disabled {
	opacity: 0.6;
}
.group:hover .group-hover\:opacity-100 {
	opacity: 1;
}
@media (min-width: 1024px) {
	.lg\:grid-cols-2 {
		grid-template-columns: repeat(2, minmax(0, 1fr));
	}
	.lg\:gap-x-6 {
		-moz-column-gap: 1.5rem;
		column-gap: 1.5rem;
	}
}

